Release confirms setting affects the node editors #69288

Closed
opened 2019-08-29 13:10:10 +02:00 by Yegor · 19 comments

System Information
Operating system: Linux-3.10.0-957.10.1.el7.x86_64-x86_64-with-centos-7.6.1810-Core 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-28 20:33, hash: a7ac8a22f8
Worked: 2.80 release

Short description of error
While this feature is very useful in 3d view, it's annoying in the node editors. Leads to too many clicks.
I consider it a mistake.

Exact steps for others to reproduce the error
Open up the shading editor for example and drag a node.

**System Information** Operating system: Linux-3.10.0-957.10.1.el7.x86_64-x86_64-with-centos-7.6.1810-Core 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-08-28 20:33, hash: `a7ac8a22f8` Worked: 2.80 release **Short description of error** While this feature is very useful in 3d view, it's annoying in the node editors. Leads to too many clicks. I consider it a mistake. **Exact steps for others to reproduce the error** Open up the shading editor for example and drag a node.
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

Added subscriber: @YAFU

Added subscriber: @YAFU

While this feature is very useful in 3d view, it's annoying in the node editors. Leads to too many clicks.
I consider it a mistake.

If you refer to "Release confirms" unchecked box behavior, I have to agree with this. If this is by design in 2.8, it should be at least optional, and not enabled by default in node editors.

>While this feature is very useful in 3d view, it's annoying in the node editors. Leads to too many clicks. >I consider it a mistake. If you refer to "Release confirms" unchecked box behavior, I have to agree with this. If this is by design in 2.8, it should be at least optional, and not enabled by default in node editors.
Author

Yes, i meant the unchecked box behavior.

Yes, i meant the unchecked box behavior.
Member

Added subscribers: @WilliamReynish, @lichtwerk

Added subscribers: @WilliamReynish, @lichtwerk
Member

Cannot comment about the usefulness (I have it ON all the time), but will subscribe @WilliamReynish here.

Cannot comment about the usefulness (I have it ON all the time), but will subscribe @WilliamReynish here.

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

In somecases, it's could be useful, e.g. when you are working with Laptop's -> Trackpad, whether it's Node Editor, 3d Viewport...or whatever..
IMO, In this why not a bug (useful feature already even in Node Editor)
Note: Most of the time it's checked (default)

In **some**cases, it's could be **useful**, e.g. when you are working with **Laptop's -> Trackpad**, whether it's **Node Editor**, **3d Viewport**...or whatever.. IMO, In this why **not a bug** (**useful feature** already even in Node Editor) **Note:** Most of the time **it's checked** (default)

Just to clarify that "Release Confirms" unchecked box behavior has no effect on node editors in 2.79, and I think that developers intentionally chose to do so because it is annoying most of the time (or at least not as useful as in 3D View editor ). While it is acceptable for some users to consider this behavior useful in node editor, I think that it should then be an option in which the user can choose the behavior in node editor (please)

Just to clarify that "Release Confirms" unchecked box behavior has no effect on node editors in 2.79, and I think that developers intentionally chose to do so because it is annoying most of the time (or at least not as useful as in 3D View editor ). While it is acceptable for some users to consider this behavior useful in node editor, I think that it should then be an option in which the user can choose the behavior in node editor (please)

Added subscriber: @AnadinX

Added subscriber: @AnadinX

I just tried Release Confirms OFF and it feels completely wrong :) even in node editors. Some tools might have a checkbox for 3D views and 2D views but it could get confusing to differentiate users desired behaviour in graph editors vs node editors vs text editors (what about orthographic views?)

I'd vote for leaving it on by default personally.

I just tried Release Confirms OFF and it feels completely wrong :) even in node editors. Some tools might have a checkbox for 3D views and 2D views but it could get confusing to differentiate users desired behaviour in graph editors vs node editors vs text editors (what about orthographic views?) I'd vote for leaving it on by default personally.
Author

In #69288#765203, @AnadinX wrote:
I just tried Release Confirms OFF and it feels completely wrong :) even in node editors. Some tools might have a checkbox for 3D views and 2D views but it could get confusing to differentiate users desired behaviour in graph editors vs node editors vs text editors (what about orthographic views?)

I'd vote for leaving it on by default personally.

You're new to blender and started with 2.8, right? Because release confirms off been there for years and it has its benefits in 3d view, dope sheet and curve editor, but not in node editors. And i agree, that this setting must be separated for different editors. Or make it as it was before: the setting does not affect node editors.

> In #69288#765203, @AnadinX wrote: > I just tried Release Confirms OFF and it feels completely wrong :) even in node editors. Some tools might have a checkbox for 3D views and 2D views but it could get confusing to differentiate users desired behaviour in graph editors vs node editors vs text editors (what about orthographic views?) > > I'd vote for leaving it on by default personally. You're new to blender and started with 2.8, right? Because release confirms off been there for years and it has its benefits in 3d view, dope sheet and curve editor, but not in node editors. And i agree, that this setting must be separated for different editors. Or make it as it was before: the setting does not affect node editors.

Actually been using Blender since 2.5 and I have always had it on, obviously my comment is only an opinion of my own experience. It's probably best to have seperate settings for editors (UE4 does this), the one downside is it can get a bit 'busy' in the preferences with different settings per view. On balance though it would be best I'd say.

Actually been using Blender since 2.5 and I have always had it on, obviously my comment is only an opinion of my own experience. It's probably best to have seperate settings for editors (UE4 does this), the one downside is it can get a bit 'busy' in the preferences with different settings per view. On balance though it would be best I'd say.

This issue was referenced by 540eb2dc1e

This issue was referenced by 540eb2dc1e57e649483fb66c7034bded85c8f54e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-10-03 09:56:56 +02:00

Thank you very much for considering that this was an unwanted behavior! I thought we would have to live with this. Thank you.

Thank you very much for considering that this was an unwanted behavior! I thought we would have to live with this. Thank you.

This issue was referenced by 295f888433

This issue was referenced by 295f8884336c6e4a3eb58cacb70ca3eb662a866f
Member

@YAFU: changed for a different method (295f888433 -- previous commit was causing #70504), should be no functional change though...

@YAFU: changed for a different method (295f888433 -- previous commit was causing #70504), should be no functional change though...

@lichtwerk , I see, right. Now this is working as in 2.79.
Thanks.

@lichtwerk , I see, right. Now this is working as in 2.79. Thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69288
No description provided.