Fix T69288: release confirms preference should not affect node editor

Was missing from new macro operators.